--- a/scss/main.css
+++ b/scss/main.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Space Mono";
+  src: url(../../fonts/SpaceMono-Regular.ttf);
+}
+@font-face {
+  font-family: "Lexend Deca";
+  src: url(../../fonts/LexendDeca-Regular.ttf);
+}
 * {
   margin: 0;
   padding: 0;
@@ -12,6 +20,14 @@
   margin: 0 auto;
 }
 
+@font-face {
+  font-family: "Space Mono";
+  src: url(../../fonts/SpaceMono-Regular.ttf);
+}
+@font-face {
+  font-family: "Lexend Deca";
+  src: url(../../fonts/LexendDeca-Regular.ttf);
+}
 .nav {
   padding: 22px 0;
   display: flex;
