--- a/scss/_veraybels.scss
+++ b/scss/_veraybels.scss
@@ -1,4 +1,6 @@
+$mono: 'Space Mono';
+$desa: 'Lexend Deca';
 $headeding:#495567;
 $text-color: #939CAA;
-$btn-color : #FCB72B;
+$btn-color: #FCB72B;
 $h1color: #FFFFFF;
