--- a/scss/main.css
+++ b/scss/main.css
@@ -28,20 +28,40 @@
   font-family: "Lexend Deca";
   src: url(../../fonts/LexendDeca-Regular.ttf);
 }
-.nav {
+nav {
   padding: 22px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 100000000;
+  background-color: #fff;
+}
+
+.nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  justify-content: Space-between;
+  flex-wrap: nowrap;
+}
+.nav .list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: Space-between;
+  flex-wrap: nowrap;
+}
+.nav .list__burger {
+  display: none;
+}
+.nav .list__logo {
+  padding-right: 58px;
 }
 .nav__list {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   gap: 32px;
 }
 .nav__list--item a {
@@ -52,18 +72,245 @@
   line-height: 25px;
   color: #939CAA;
 }
-.nav__list .logo {
-  padding-right: 28px;
-}
 .nav__btn {
   background: #FCB72B;
-  padding: 14px 39px;
   border: none;
+  padding: 14px 39px;
   font-family: "Space Mono";
   font-style: normal;
   font-weight: 700;
   font-size: 15px;
   line-height: 25px;
-  text-align: center;
   color: #FFFFFF;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0 40px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .nav {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: start;
+    flex-wrap: nowrap;
+  }
+  .nav .list {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    flex-wrap: nowrap;
+  }
+  .nav .list__img {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    flex-wrap: nowrap;
+    gap: 198px;
+  }
+  .nav .list__burger {
+    display: block;
+    padding-left: 22px;
+  }
+  .nav .list__logo {
+    padding-right: 58px;
+  }
+  .nav__list {
+    transform: translatex(-200%);
+    background: #333A44;
+    padding-top: 64px;
+    padding-left: 32px;
+    position: absolute;
+    padding-right: 135px;
+    padding-bottom: 339px;
+    top: 87px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 32px;
+  }
+  .nav__list--item a {
+    font-family: "Space Mono";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 25px;
+    color: #939CAA;
+  }
+  .nav__btn {
+    position: absolute;
+    top: 576px;
+    left: 72px;
+    transform: translatex(-200%);
+  }
+}
+@media screen and (max-width: 400px) {
+  .nav .list__img {
+    gap: 98px;
+  }
+}
+.section1 {
+  background-image: url(../../imges/Bitmap.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+
+.hero {
+  padding-bottom: 282px;
+}
+.hero__title {
+  padding-top: 249px;
+  font-family: "Space Mono";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 56px;
+  color: #FFFFFF;
+  max-width: 600px;
+  width: 100%;
+  padding-bottom: 40px;
+}
+.hero__flex {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: start;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+.hero__flex--text {
+  max-width: 405px;
+  width: 100%;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #FFFFFF;
+  padding-bottom: 40px;
+}
+.hero__flex--logo {
+  position: absolute;
+  left: -200px;
+  top: 40px;
+}
+.hero__flex--logo1 {
+  padding-top: 40px;
+  padding-left: 40px;
+}
+.hero__flex--logo1 {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .section1 {
+    padding: 0;
+    background-image: url(../../imges/Bitmaptablet.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+  }
+  .hero {
+    padding: 0;
+    padding-bottom: 300px;
+  }
+  .hero__title {
+    padding: 0;
+    padding-top: 220px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .hero__flex {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+  .hero__flex--text {
+    max-width: 573px;
+    width: 100%;
+    padding: 0;
+    padding-top: 24px;
+    padding-bottom: 32px;
+    text-align: center;
+  }
+  .hero__flex--btn {
+    display: block;
+    max-width: 180px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .hero__flex--logo {
+    display: none;
+  }
+  .hero__flex--logo1 {
+    display: none;
+  }
+  .hero__flex--logo2 {
+    display: block;
+    position: absolute;
+    bottom: -160px;
+    left: -170px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .section1 {
+    padding: 0;
+    background-image: url(../../imges/Bitmapmobayl.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center;
+  }
+  .hero {
+    padding: 0;
+    padding-bottom: 300px;
+  }
+  .hero__title {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .hero__flex {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+  .hero__flex--text {
+    max-width: 573px;
+    width: 100%;
+    padding: 0;
+    padding-top: 24px;
+    padding-bottom: 32px;
+    text-align: center;
+  }
+  .hero__flex--btn {
+    transform: translatex(0);
+    top: 190px;
+    left: 50px;
+  }
+  .hero__flex--logo {
+    display: none;
+  }
+  .hero__flex--logo1 {
+    display: none;
+  }
+  .hero__flex--logo2 {
+    display: block;
+    position: absolute;
+    bottom: -160px;
+    left: -370px;
+  }
 }/*# sourceMappingURL=main.css.map */
