--- a/scss/all-block/_section.scss
+++ b/scss/all-block/_section.scss
@@ -18,7 +18,9 @@
     }
     &__flex {
         position: relative;
-        @include flexfunksiya (row, start, center, nowrap);
+        .p {
+            padding-left: 58px;
+        }
         &--text {
             max-width: 405px;
             width: 100%;
@@ -36,10 +38,11 @@
             top: 40px;
         }
         &--logo1 {
-            padding-top: 40px;
-            padding-left: 40px;
+            position: absolute;
+            top: 32px;
+            right: 160px;
         }
-        &--logo1 {
+        &--logo2 {
             display: none;
         }
     }
@@ -62,6 +65,9 @@
         &__flex {
             position: relative;
             @include flexfunksiya (column, center, center, nowrap);
+            .p {
+                padding-left: 0px;
+            }
             &--text {
                 max-width: 573px;
                 width: 100%;
@@ -86,20 +92,20 @@
                 display: block;
                 position: absolute;
                 bottom: -160px;
-                left: -170px;
+                left: -150px;
             }
         }
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:576px) {
     .section1 {
         padding: 0;
         @include BG (url(../../imges/Bitmapmobayl.png), no-repeat, 100%, center);
     }
     .hero {
         padding: 0;
-        padding-bottom: 300px;
+        padding-bottom: 400px;
         &__title {
             font-size: 40px;
             line-height: 40px;
@@ -118,7 +124,7 @@
             &--btn {
                 transform: translatex(0);
                 top: 190px;
-                left: 50px;
+                left: 79px;
             }
             &--logo {
                 display: none;
@@ -129,7 +135,7 @@
             &--logo2 {
                 display: block;
                 position: absolute;
-                bottom: -160px;
+                bottom: -240px;
                 left: -370px;
             }
         }
