--- a/scss/main.css
+++ b/scss/main.css
@@ -181,11 +181,9 @@ nav {
 }
 .hero__flex {
   position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: start;
-  justify-content: center;
-  flex-wrap: nowrap;
+}
+.hero__flex .p {
+  padding-left: 58px;
 }
 .hero__flex--text {
   max-width: 405px;
@@ -204,10 +202,11 @@ nav {
   top: 40px;
 }
 .hero__flex--logo1 {
-  padding-top: 40px;
-  padding-left: 40px;
+  position: absolute;
+  top: 32px;
+  right: 160px;
 }
-.hero__flex--logo1 {
+.hero__flex--logo2 {
   display: none;
 }
 
@@ -237,6 +236,9 @@ nav {
     justify-content: center;
     flex-wrap: nowrap;
   }
+  .hero__flex .p {
+    padding-left: 0px;
+  }
   .hero__flex--text {
     max-width: 573px;
     width: 100%;
@@ -261,10 +263,10 @@ nav {
     display: block;
     position: absolute;
     bottom: -160px;
-    left: -170px;
+    left: -150px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 576px) {
   .section1 {
     padding: 0;
     background-image: url(../../imges/Bitmapmobayl.png);
@@ -274,7 +276,7 @@ nav {
   }
   .hero {
     padding: 0;
-    padding-bottom: 300px;
+    padding-bottom: 400px;
   }
   .hero__title {
     font-size: 40px;
@@ -299,7 +301,7 @@ nav {
   .hero__flex--btn {
     transform: translatex(0);
     top: 190px;
-    left: 50px;
+    left: 79px;
   }
   .hero__flex--logo {
     display: none;
@@ -310,7 +312,7 @@ nav {
   .hero__flex--logo2 {
     display: block;
     position: absolute;
-    bottom: -160px;
+    bottom: -240px;
     left: -370px;
   }
 }/*# sourceMappingURL=main.css.map */
