--- a/scss/all-block/_section.scss
+++ b/scss/all-block/_section.scss
@@ -141,3 +141,15 @@
         }
     }
 }
+
+@media screen and (max-width:400px) {
+    .hero {
+        &__flex {
+            &--btn {
+                transform: translatex(0);
+                top: 190px;
+                left: 62px;
+            }
+        }
+    }
+}
