--- a/scss/all-block/_section.scss
+++ b/scss/all-block/_section.scss
@@ -153,3 +153,34 @@
         }
     }
 }
+
+.hero1 {
+    &__list {
+        @include flexfunksiya (row, center, center, wrap);
+        gap: 30px;
+        padding-bottom: 147px;
+        padding-top: 100px;
+        &--item {
+            .title {
+                font-family: $mono;
+                padding-top: 40px;
+                padding-bottom: 27px;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 24px;
+                line-height: 28px;
+                color: $headeding;
+            }
+            .text {
+                max-width: 350px;
+                width: 100%;
+                font-family: $desa;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 15px;
+                line-height: 25px;
+                color: $text-color;
+            }
+        }
+    }
+}
