--- a/scss/main.css
+++ b/scss/main.css
@@ -322,4 +322,34 @@ nav {
     top: 190px;
     left: 62px;
   }
+}
+.hero1__list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  padding-bottom: 147px;
+  padding-top: 100px;
+}
+.hero1__list--item .title {
+  font-family: "Space Mono";
+  padding-top: 40px;
+  padding-bottom: 27px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  color: #495567;
+}
+.hero1__list--item .text {
+  max-width: 350px;
+  width: 100%;
+  font-family: "Lexend Deca";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  color: #939CAA;
 }/*# sourceMappingURL=main.css.map */
