--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,10 @@
     margin: 0 auto;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 @import './mixin.scss';
 @import './veraybels';
 @import './all-block/all-blocks.scss';
