--- a/scss/all-block/_section.scss
+++ b/scss/all-block/_section.scss
@@ -35,7 +35,7 @@
         &--logo {
             position: absolute;
             left: -200px;
-            top: 40px;
+            top: 35px;
         }
         &--logo1 {
             position: absolute;
@@ -247,6 +247,7 @@
             display: none;
         }
         &__list {
+            padding-bottom: 0;
             display: block;
             &--item {
                 padding-bottom: 48px;
@@ -267,6 +268,20 @@
     &__list {
         padding-top: 83px;
         @include flexfunksiya (row, center, Space-between, wrap);
+        .cart1 {
+            @include flexfunksiya (row, center, Space-between, wrap);
+        }
+        .odam {
+            position: relative;
+            right: -200px;
+        }
+        .xamyon {
+            position: relative;
+            right: -200px;
+        }
+        .cart2 {
+            @include flexfunksiya (row, center, Space-between, wrap);
+        }
         .item-title1 {
             font-family: $mono;
             font-style: normal;
@@ -294,7 +309,13 @@
         .bino1 {
             display: none;
         }
-        .xayon1 {
+        .bino2 {
+            display: none;
+        }
+        .bino3 {
+            display: none;
+        }
+        .xamyon1 {
             display: none;
         }
     }
@@ -331,33 +352,51 @@
     &__logo6 {
         z-index: -1;
         position: absolute;
-        top: 1120px;
+        top: 1200px;
         right: -210px;
+    }
+    .odam2 {
+        display: none;
+    }
+    .odam3 {
+        display: none;
+    }
+    .xamyon2 {
+        display: none;
+    }
+    .xamyon3 {
+        display: none;
     }
 }
 
 @media screen and (max-width:768px) {
     .hero2 {
         position: relative;
-        &__bttn {
-            max-width: 180px;
-            width: 100%;
-            display: block;
-            margin: 0 auto;
+        &__bttn1 {
+            font-family: 'Space Mono';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 15px;
+            line-height: 25px;
+            border: none;
+            text-align: center;
+            color: #FFFFFF;
+            padding: 14px 39px;
+            background: #FCB72B;
         }
         &__list {
             padding-top: 83px;
             @include flexfunksiya (column, center, center, wrap);
             .cart1 {
                 @include flexfunksiya (column-reverse, center, center, wrap);
-                flex-direction: column-reverse;
             }
             .cart2 {
                 @include flexfunksiya (column-reverse, center, center, wrap);
             }
             &--item {
-                max-width: 768px;
+                max-width: 700px;
                 margin: 0 auto;
+                text-align: center;
             }
             .item-title1 {
                 font-family: $mono;
@@ -422,11 +461,120 @@
             position: relative;
             left: -65px;
         }
+        .bino2 {
+            display: none;
+        }
+        .bino3 {
+            display: none;
+        }
         .xamyon1 {
             position: relative;
             right: -69px;
             display: block;
             padding-bottom: 64px;
+        }
+        .xamyon2 {
+            display: none;
+        }
+        .xamyon3 {
+            display: none;
+        }
+        .odam2 {
+            display: none;
+        }
+        .odam3 {
+            display: none;
+        }
+    }
+}
+
+@media screen and (max-width:576px) {
+    .hero2 {
+        padding-bottom: 120px;
+        position: relative;
+        &__bttn1 {
+            font-family: 'Space Mono';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 15px;
+            line-height: 25px;
+            border: none;
+            text-align: center;
+            color: #FFFFFF;
+            padding: 14px 39px;
+            background: #FCB72B;
+        }
+        &__list {
+            padding-top: 83px;
+            @include flexfunksiya (column, center, center, wrap);
+            .cart1 {
+                @include flexfunksiya (column-reverse, center, center, wrap);
+                flex-direction: column-reverse;
+            }
+            .cart2 {
+                @include flexfunksiya (column-reverse, center, center, wrap);
+            }
+            &--item {
+                max-width: 768px;
+                margin: 0 auto;
+                position: relative;
+            }
+            .item-title1 {
+                font-size: 32px;
+                line-height: 32px;
+            }
+            .item-text1 {
+                max-width: 573px;
+                padding-bottom: 40px;
+                font-family: $desa;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 15px;
+                line-height: 25px;
+                color: $text-color;
+                text-align: center;
+            }
+            .titi {
+                padding-top: 64px;
+            }
+        }
+        .odam1 {
+            display: none;
+        }
+        .bino1 {
+            display: none;
+        }
+        .xamyon1 {
+            display: none;
+        }
+        .odam2 {
+            display: block;
+            padding-bottom: 56px;
+        }
+        .odam3 {
+            display: block;
+            position: absolute;
+            top: 190px;
+            right: -80px;
+        }
+        .bino2 {
+            display: block;
+        }
+        .bino3 {
+            display: block;
+            position: absolute;
+            top: 0px;
+            left: -80px;
+        }
+        .xamyon2 {
+            display: block;
+            padding-bottom: 56px;
+        }
+        .xamyon3 {
+            display: block;
+            position: absolute;
+            top: 0px;
+            right: -50px;
         }
     }
 }
